Chamber added banner

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,6 +38,10 @@
         <a href="join.html">Join</a>
     </nav>
     <main>
+        <div id="banner">
+            <p id="bannerMsg"></p>
+            <button id="closeBanner"></button>
+        </div>
         <div id="hero">
             <img src="images/roseville-roses.webp" alt="Roseville Civic Center with roses">
         </div>
@@ -76,13 +80,8 @@
             </figure>
         </section>
         <section class="spotlight">
-            <h2>Spotlight Advertisement</h2>
-            <div>
-                <img src="#" alt="picture of business or logo">
-                <h3>Name of Business</h3>
-                <p>Advertisement of some sort that would be appealing to viewers. Could include recognition or recent
-                    business event. Should include location and contact info.</p>
-            </div>
+            <h2>Spotlight</h2>
+
         </section>
     </main>
     <footer>
@@ -97,6 +96,7 @@
     <script src="scripts/menu.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/spotlight.js" defer></script>
+    <script src="scripts/banner.js" defer></script>
 </body>
 
 
