Chamber Format Info

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mooli&family=Ysabeau+Infant:ital,wght@0,600;1,800&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" defer>
     <!--CSS styles-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link href="styles/base.css" rel="stylesheet">
@@ -51,7 +51,7 @@
         </div>
         <section class="info">
             <h2>Community Information</h2>
-            <img src="#" alt="some event picture">
+            <img src="images/event.webp" alt="event picture" loading="lazy" height="183" width="275">
             <div>
                 <h3>Event Details</h3>
                 <p>Some specific information about the next upcoming event that includes details that will encourage
