--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,8 +46,9 @@
             <img src="images/roseville-roses.webp" alt="Roseville Civic Center with roses">
         </div>
         <div class="action">
-            <button aria-label="join" id="join">Become a Member<a href="#"></a></button>
-
+            <a href="join.html">
+                <button aria-label="join" id="join">Become a Member</button>
+            </a>
         </div>
         <section class="info">
             <h2>Community Information</h2>
