--- a/chamber/join.html
+++ b/chamber/join.html
@@ -68,7 +68,7 @@
                 <legend>Primary Contact</legend>
                 <label>First Name* <input type="text" name="fname" id="fname" required></label>
                 <label>Last Name* <input type="text" name="lname" id="lname" required></label>
-                <label>Title or Position <input type="text" name="title" id="title" pattern="[a-zA-Z\s-]{7,}"
+                <label>Title or Position <input type="text" name="title" id="title" pattern="[a-zA-Z -]{7,}"
                         title="Must be at least (7) characters and contain only letters, spaces, and hyphens (-)"></label>
                 <label>Email* <input type="email" name="email" id="email" required
                         placeholder="example@gmail.com"></label>
@@ -99,7 +99,6 @@
             </fieldset>
             <input type="submit" value="Apply for Membership">
         </form>
-
     </main>
     <footer>
         <p>
