moved a tag inside of join button

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,9 +46,7 @@
             <img src="images/roseville-roses.webp" alt="Roseville Civic Center with roses">
         </div>
         <div class="action">
-            <a href="join.html">
-                <button aria-label="join" id="join">Become a Member</button>
-            </a>
+            <button aria-label="join" id="join">Become a Member<a href="join.html"></a></button>
         </div>
         <section class="info">
             <h2>Community Information</h2>
