update title for HTML pages

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join-Roseville Chamber of Commerce</title>
+    <title>Thank You - Roseville Chamber of Commerce</title>
     <meta name="description" content="Thank you page for the City of Roseville Chamber of Commerce">
     <meta name="author" content="Deana Briggs">
     <!--Social Media Content-->
