added JS to open form with Join button is clicked

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
             <img src="images/roseville-roses.webp" alt="Roseville Civic Center with roses">
         </div>
         <div class="action">
-            <button aria-label="join" id="join">Become a Member<a href="join.html"></a></button>
+            <button aria-label="join" id="join">Become a Member</button>
         </div>
         <section class="info">
             <h2>Community Information</h2>
@@ -80,7 +80,6 @@
         </section>
         <section class="spotlight">
             <h2>Spotlight</h2>
-
         </section>
     </main>
     <footer>
@@ -96,6 +95,7 @@
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/spotlight.js" defer></script>
     <script src="scripts/banner.js" defer></script>
+    <script src="scripts/action.js" defer></script>
 </body>
 
 
