--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roseville Chamber - Site Plan</title>
+    <title>Roseville Chamber of Commerce - Site Plan</title>
     <meta name="description" content="Site plan for the city of Roseville Chamber of Commerce website. ">
     <meta name="author" content="Deana Briggs">
 
