--- a/chamber/join.html
+++ b/chamber/join.html
@@ -35,7 +35,7 @@
         <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a href="directory.html">Directory</a>
-        <a class="active" href="form.html">Join</a>
+        <a class="active" href="join.html">Join</a>
     </nav>
     <main>
         <h2>Become A Member</h2>
