rename roseville-roses img to roseville

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,7 +43,7 @@
             <button id="closeBanner"></button>
         </div>
         <div id="hero">
-            <img src="images/roseville-roses.webp" alt="Roseville Civic Center with roses">
+            <img src="images/roseville.webp" alt="Roseville Civic Center with roses">
         </div>
         <div class="action">
             <button aria-label="join" id="join">Become a Member</button>
